--- a/index.html
+++ b/index.html
@@ -4,9 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rock Paper Scissors</title>
-    <script src="game.js"></script>
 </head>
 <body>
-    
+    <div id ="gameButtons">
+        <button id ="rock">Rock</button>
+        <button id ="paper">Paper</button>
+        <button id ="scissors">Scissors</button>
+    </div>
+    <div id = "scorescreen"></div>
+    <div id = "runningscore"></div>
+    <script src="game.js"></script>
 </body>
 </html>
